--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "@types/react-input-mask": "^3.0.2",
+    "cep-promise": "^4.4.0",
+    "immer": "^9.0.19",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^6.8.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zod": "^3.20.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
